<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSS Ninja</string>
    <string name="menu_settings">Settings</string>
    <string name="prueba">test</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="empty"></string>

    <!-- onbackpressed -->
    <string name="exit_confirmation">Really exit?</string>
    <string name="exit_confirmation_text">"Are you sure you want to exit?"</string>

    <!-- Feed Entry -->
    <string name="entry_without_content">This item has no content</string>

    <!-- drawer list -->
    <string name="zero">0</string>
    <string name="drawer_popular">Popular items</string>
    <string name="drawer_saved">Saved items</string>
    <string name="drawer_all">All items</string>
    <string name="drawer_uncategorized">Uncategorized</string>
    <string name="about_developer">About the developer</string>

    <!-- items list -->
    <string name="popular">Popular</string>
    <string name="saved_article">Saved article</string>
    <string name="unsaved_article">Unsaved article</string>

    <!-- no internet connection message -->
    <string name="no_internet_connection">No Internet Connection</string>

    <!-- preferences -->
    <string name="preferences_category_summary">Feeds will auto-refresh with some changes</string>
    <string name="only_unread">Only unread</string>
    <string name="only_unread_summary">Don\'t show read articles</string>
    <string name="list_with_cards">Article list in \'card\' style</string>
    <string name="list_with_cards_summary">Images will be bigger (this will be the default for big screens)</string>
    <string name="licences">Open source licences</string>
    <string name="logout">Log out</string>
    <string name="pref_text_size">Article font size</string>
    <string name="pref_text_size_summary">In the article view</string>
    <string name="text_size_small">Small</string>
    <string name="text_size_medium">Medium</string>
    <string name="text_size_big">Big</string>
    <string name="text_size_very_big">Very big</string>
    <string name="pref_rate_app">Rate RSS Ninja</string>
    <string name="rate_app">Rate RSS Ninja</string>
    <string name="rate_app_message">If you like using RSS Ninja, it would be great if you took a moment to rate it in the Play Store. Thank you!</string>
    <string name="rate_app_negative">Never</string>
    <string name="rate_app_neutral">Not now</string>
    <string name="rate_app_positive">Yeah!</string>
    <string name="error_opening_market">Couldn\'t launch the market</string>

    <!-- MAIN ACTION BAR -->
    <!-- menu refresh -->
    <string name="menu_refresh">Refresh</string>
    <!-- menu mark as read -->
    <string name="menu_mark_all_read">Mark all as read</string>
    <!-- marked as read success message -->
    <string name="marked_all_as_read_success_message">Marked all as read</string>

    <!-- ENTRY ACTION BAR -->
    <!-- share -->
    <string name="entry_menu_share">Share</string>
    <!-- share dialog text after share clicked -->
    <string name="share_text">Share via</string>
    <!-- mark unread -->
    <string name="entry_menu_mark_unread">Mark unread</string>
    <!-- open in browser -->
    <string name="open_in_browser">Open in browser</string>
    <!-- mark saved -->
    <string name="mark_saved">Mark saved</string>
    <!-- mark unsaved -->
    <string name="mark_unsaved">Mark unsaved</string>

    <!-- Message to show when cliked on keep as unread -->
    <string name="kept_as_unread">Kept as unread</string>
    <string name="marked_as_read">Marked as read</string>
    <string name="marked_as_unread">Marked as unread</string>

    <!-- ERRORS -->
    <string name="parsing_subscriptions_exception">Error parsing suscription</string>
    <string name="receiving_subscriptions_exception">Error receiving subscriptions</string>
    <string name="receiving_unread_subscriptions_exception">Error reading unread suscriptions</string>
    <string name="error_login">Failed to log in</string>
    <string name="error_loading_entry">Error loading entry</string>
    <string name="error_marking_entry">Error marking entry</string>
    <string name="error_marking_all_as_read">Error al marcar como leídos</string>
    <string name="generic_exception">Error</string>

    <!-- licences -->
    <string name="licencing_text">Feedly Ninja</string>
    <string name="licences_text">
<![CDATA[
        Many thanks to these open source projects:<br><br>

        <b><a href="https://github.com/hnakagawa/dagger-android-helper-library">Dagger android helper library</a>&nbsp;</b><br>
        <i>by Hirofumi Nakagawa</i><br><br>

        <b><a href="http://square.github.io/retrofit/">Retrofit</a>&nbsp;</b><br>
        <i>by Square</i><br><br>
        
        <b><a href="http://square.github.io/okhttp/">OkHttp</a>&nbsp;</b><br>
        <i>by Square</i><br><br>
        
        <b><a href="https://github.com/Kopfgeldjaeger/RateMeMaybe">RateMeMaybe</a>&nbsp;</b><br>
        <br>
        
        <b><a href="http://square.github.io/dagger/">Dagger</a>&nbsp;</b><br>
        <i>by Square</i><br><br>
        
    ]]>
    </string>
    <string name="about_version_template">v%1$s</string>

</resources>