<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_settings">

    <PreferenceCategory android:title="@string/preferences_category_summary">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_only_unread"
            android:summary="@string/only_unread_summary"
            android:title="@string/only_unread" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_list_with_cards"
            android:summary="@string/list_with_cards_summary"
            android:title="@string/list_with_cards" />

        <ListPreference
            android:defaultValue="18"
            android:dialogTitle="@string/pref_text_size"
            android:entries="@array/articleTextSizeListentries"
            android:entryValues="@array/textSizeListValues"
            android:key="pref_key_article_text_size"
            android:summary="@string/pref_text_size_summary"
            android:title="@string/pref_text_size" />

        <Preference
            android:key="pref_key_licences"
            android:title="@string/licences"/>
        <Preference
            android:key="pref_rate_app"
            android:title="@string/pref_rate_app"/>
        <Preference
            android:key="pref_key_logout"
            android:title="@string/logout"/>
    </PreferenceCategory>

</PreferenceScreen>